--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <ul class="team-list">
             <li class="team-item">
               <img
+                class="img-photo"
                 src="./images/photo1.jpg"
                 alt="фото работников"
                 width="270"
@@ -137,6 +138,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img-photo"
                 src="./images/photo2.jpg"
                 alt="фото работников"
                 width="270"
@@ -147,6 +149,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img-photo"
                 src="./images/photo3.jpg"
                 alt="фото работников"
                 width="270"
@@ -157,6 +160,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img-photo"
                 src="./images/photo4.jpg"
                 alt="фото работников"
                 width="270"
@@ -169,14 +173,14 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a class="logo-footer link" href=""
           ><span class="text-footer">Web</span>Studio</a
         >
         <address class="footer-adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="footer-list">
-          <li>
+          <li class="footer-item">
             <a class="footer-contact link" href="mailto:info@example.com"
               >info@example.com</a
             >
